[project]
name = "2024-02-19"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Keisuke Yamanaka", email = "2500024+1021ky@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.109.2",
    "sqlalchemy>=2.0.27",
    "uvicorn>=0.27.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "_2024_02_19:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.2.2",
    "mypy>=1.8.0",
    "ssort>=0.12.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_2024_02_19"]
