[project]
name = "2024-02-20"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Keisuke Yamanaka", email = "2500024+1021ky@users.noreply.github.com" }
]
dependencies = [
    "uvicorn>=0.27.1",
    "sqlalchemy>=2.0.27",
    "fastapi>=0.109.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "_2024_02_20:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_2024_02_20"]
