[project]
name = "2024-05-01"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Keisuke Yamanaka", email = "2500024+1021ky@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.110.3",
    "uvicorn>=0.29.0",
    "starlette>=0.37.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_2024_05_01"]
