[project]
name = "2024-06-11"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Keisuke Yamanaka", email = "vaivailx+git@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_2024_06_11"]