[project]
name = "2025-02-22"
version = "0.1.0"
description = ""
authors = [
    {name = "Keisuke Yamanaka",email = "2500024+1021ky@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
