[project]
name = "2025-09-10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = []

[tool.ruff]
target-version = 'py313'

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[pytest]
addopts = "-v"
testpaths = ["tests"]

