[tool.poetry]
name = "daily-coding-2023-12-18"
version = "0.1.0"
description = "hello world"
authors = ["Keisuke Yamanaka <2500024+1021ky@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
