[tool.poetry]
name = "2024-01-09"
version = "0.1.0"
description = "wsgi impl"
authors = ["Keisuke Yamanaka <vaivailx@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

