[tool.poetry]
name = "2024-01-10"
version = "0.1.0"
description = "wsgi impl"
authors = ["Keisuke Yamanaka <2500024+1021ky@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
