[tool.poetry]
name = "2024-01-23"
version = "0.1.0"
description = "pytestでhello world"
authors = ["Keisuke Yamanaka <2500024+1021ky@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
