[project]
name = "daily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Keisuke Yamanaka", email = "2500024+1021ky@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
daily = "daily:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
