[project]
name = "lfu-cache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Keisuke Yamanaka", email = "2500024+1021ky@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
lfu-cache = "lfu_cache:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
