[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-hatch"
dynamic = ["version"]
description = 'try hatch'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Keisuke Yamanaka", email = "2500024+1021ky@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Keisuke Yamanaka/hello-hatch#readme"
Issues = "https://github.com/Keisuke Yamanaka/hello-hatch/issues"
Source = "https://github.com/Keisuke Yamanaka/hello-hatch"

[tool.hatch.version]
path = "src/hello_hatch/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hello_hatch tests}"

[tool.coverage.run]
source_pkgs = ["hello_hatch", "tests"]
branch = true
parallel = true
omit = [
  "src/hello_hatch/__about__.py",
]

[tool.coverage.paths]
hello_hatch = ["src/hello_hatch", "*/hello-hatch/src/hello_hatch"]
tests = ["tests", "*/hello-hatch/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
